--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
-                title="YouTube video player" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/uIT3OpzElxg?si=s8fpncwvena_hZq2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
     <section class="categoria">
-        <h2>Filmes e séries</h2>
+        <h2>Filmes, séries e animes</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+            <a href="https://www.youtube.com/embed/2ECfobV6sNc?si=QLq-HHE-PU1cq0MZ">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+            <a href="https://www.youtube.com/embed/pP_6wNTmYlo?si=BVt_uFa9aUdL-6RA">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
@@ -51,3 +50,5 @@
 </body>
 
 </html>
+
+"https://www.youtube.com/embed/pP_6wNTmYlo?si=BVt_uFa9aUdL-6RA" 
