--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <section class="categoria">
-        <h2>Filmes, séries e animes</h2>
+        <h2>Animes</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/embed/2ECfobV6sNc?si=QLq-HHE-PU1cq0MZ">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
