--- a/index.html
+++ b/index.html
@@ -19,18 +19,16 @@
             <p>#Chapéu de palha</p>
         </div>
 
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/uIT3OpzElxg?si=s8fpncwvena_hZq2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div>allow
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/pP_6wNTmYlo?si=gfCiw8vbCqQ14fuQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
     <section class="categoria">
         <h2>Animes</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/embed/2ECfobV6sNc?si=QLq-HHE-PU1cq0MZ">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=pP_6wNTmYlo">
+                <img src="https://img.youtube.com/vi/pP_6wNTmYlo"/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/embed/pP_6wNTmYlo?si=BVt_uFa9aUdL-6RA">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
