--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Curiosidade One piece</h1>
-            <p>#Chapéu de palha</p>
+            <h1>Campeonato dos Deuses</h1>
+            <p>#Dragon Ball Super</p>
         </div>
 
         <div>allow
@@ -27,8 +27,8 @@
     <section class="categoria">
         <h2>Animes</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=pP_6wNTmYlo">
-                <img src="https://img.youtube.com/vi/pP_6wNTmYlo"/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=fRyKC_kXDIE">
+                <img src="https://img.youtube.com/vi/fRyKC_kXDIE"/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/embed/pP_6wNTmYlo?si=BVt_uFa9aUdL-6RA">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
