--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <section class="categoria">
         <h2>Animes</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=fRyKC_kXDIE">
-                <img src="https://img.youtube.com/vi/fRyKC_kXDIE"/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=cU7Ard5bqdg">
+                <img src="https://img.youtube.com/vi/cU7Ard5bqdg"/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/embed/pP_6wNTmYlo?si=BVt_uFa9aUdL-6RA">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
