--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a href="https://www.youtube.com/watch?v=cU7Ard5bqdg">
                 <img src="https://img.youtube.com/vi/cU7Ard5bqdg">
             </a>
-            <a href="https://www.youtube.com/embed/pP_6wNTmYlo?si=BVt_uFa9aUdL-6RA">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=p6aD2iNFZuc">
+                <img src="https://img.youtube.com/vi/p6aD2iNFZuc" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
