--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="https://img.youtube.com/vi/cU7Ard5bqdg">
             </a>
             <a href="https://www.youtube.com/watch?v=p6aD2iNFZuc">
-                <img src="https://img.youtube.com/vi/p6aD2iNFZuc" />
+                <img src="https://img.youtube.com/vi/p6aD2iNFZuc">
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
