--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Animes</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=cU7Ard5bqdg">
-                <img src="https://img.youtube.com/vi/cU7Ard5bqdg">
+                <img src="https://img.youtube.com/vi/cU7Ard5bqdg/maxresdefault.jpg">
             </a>
             <a href="https://www.youtube.com/watch?v=p6aD2iNFZuc">
                 <img src="https://img.youtube.com/vi/p6aD2iNFZuc">
