--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a href="https://www.youtube.com/watch?v=cU7Ard5bqdg">
                 <img src="https://img.youtube.com/vi/cU7Ard5bqdg">
             </a>
-            <a href="https://www.youtube.com/watch?v=p6aD2iNFZuc">
-                <img src="https://img.youtube.com/vi/p6aD2iNFZuc">
+            <a href="https://www.youtube.com/watch?v=dAZ6CbgOiaA">
+                <img src="https://img.youtube.com/vi/dAZ6CbgOiaA">
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
