--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <a href="https://www.youtube.com/watch?v=p6aD2iNFZuc">
                 <img src="https://img.youtube.com/vi/p6aD2iNFZuc">
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=p6aD2iNFZuc">
+                <img src="https://img.youtube.com/vi/p6aD2iNFZuc/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
                 <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
