--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="categoria">
         <h2>Animes</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cU7Ard5bqdg">
+            <a href="https://www.youtube.com/watch?v=cU7Ard5bqdg/maxresdefault.jpg" />
                 <img src="https://img.youtube.com/vi/cU7Ard5bqdg">
             </a>
             <a href="https://www.youtube.com/watch?v=p6aD2iNFZuc">
