--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a href="https://www.youtube.com/watch?v=I0fqclj2d5M">
                 <img src="https://img.youtube.com/vi/I0fqclj2d5M/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=2ECfobV6sNc">
-                <img src="https://img.youtube.com/vi/2ECfobV6sNc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=0DcPelwP9j4">
+                <img src="https://img.youtube.com/vi/0DcPelwP9j4/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=p6aD2iNFZuc">
                 <img src="https://img.youtube.com/vi/p6aD2iNFZuc/maxresdefault.jpg" />
