--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <a href="https://www.youtube.com/watch?v=p6aD2iNFZuc">
                 <img src="https://img.youtube.com/vi/p6aD2iNFZuc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=idKnTr2uW3o">
+                <img src="https://img.youtube.com/vi/idKnTr2uW3o/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
                 <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
