--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <a href="https://www.youtube.com/watch?v=idKnTr2uW3o">
                 <img src="https://img.youtube.com/vi/idKnTr2uW3o/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=Zr3j8a3qiv8">
+                <img src="https://img.youtube.com/vi/Zr3j8a3qiv8/maxresdefault.jpg" />
             </a>
         </div>
     </section>
